--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -37,10 +37,10 @@
 					</span>
 
 					<span class="txt1 p-b-11">
-						Username
+						Email ID
 					</span>
 					<div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
-						<input class="input100" type="text" name="username" >
+						<input class="input100" type="text" name="email" >
 						<span class="focus-input100"></span>
 					</div>
 					
